--- a/A3/rem_from_DEM.ipynb
+++ b/A3/rem_from_DEM.ipynb
@@ -1,9 +1,7 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "2aab4899-4fc2-4295-be37-ffc0df88dc78",
    "metadata": {},
    "source": [
     "# Relative Elevation Model: Mendoza River\n",
@@ -12,27 +10,29 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "dc641390",
    "metadata": {},
    "source": [
     "# Step 0: Setup"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "cd355d0f",
    "metadata": {},
    "source": [
     "### Imports"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I think these libraries can also all be installed via conda -- it is evident from the environment file that you installed them with pip. \"Better\" practice would be to install everything with conda, or use a different setup (docker, other virutal environment tools) and install everything with pip instead. Mixing conda and pip can cause tro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "6093baca-2968-4575-9c92-2844b049ce58",
    "metadata": {
     "tags": []
    },
@@ -44,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "3b0ed313-5896-4b37-9170-6d3894e18c26",
    "metadata": {
     "tags": []
    },
@@ -56,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "9cd27962-5c15-4ea6-84b6-f865d1033e44",
    "metadata": {
     "tags": []
    },
@@ -83,9 +81,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "48904f72-e13e-4944-a433-ea601999ac39",
    "metadata": {},
    "source": [
     "## Step 1: Download & Load DEM"
@@ -94,7 +90,6 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "22b5905d",
    "metadata": {
     "tags": []
    },
@@ -111,7 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "e35406b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "6957c4ca",
    "metadata": {},
    "outputs": [
     {
@@ -152,9 +145,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "3b8a016c",
    "metadata": {},
    "source": [
     "Make DEM smaller and clip to focus area"
@@ -163,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "983aa79e-2224-4642-a6b0-fd7304016d68",
    "metadata": {
     "tags": []
    },
@@ -181,7 +171,6 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "bf0f3399-9da2-4238-8b44-c473ef48f8f2",
    "metadata": {
     "tags": []
    },
@@ -194,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "2beeeab6",
    "metadata": {
     "tags": []
    },
@@ -204,9 +192,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "b7401303-da9c-4def-b412-c0373b4f3bdc",
    "metadata": {},
    "source": [
     "Let's plot the DEM"
@@ -215,7 +201,6 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "ec57b4e6-8fea-4e35-af09-4ff34d6317df",
    "metadata": {
     "tags": []
    },
@@ -246,9 +231,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "e87481ea-3ea4-4162-abf4-0cfacf4460a3",
    "metadata": {},
    "source": [
     "## Step 2: Fetch coordinates of the river"
@@ -257,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "7c3c3f30",
    "metadata": {
     "tags": []
    },
@@ -268,9 +250,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "1f7e5b56-0c09-497d-b9cc-a4859fb24704",
    "metadata": {},
    "source": [
     "Let's plot the river"
@@ -279,7 +259,6 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "47537bb7-db98-40f7-baf9-b006fb50cc2f",
    "metadata": {
     "tags": []
    },
@@ -310,18 +289,14 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "34afcdd2-d473-4ef3-b616-85d340f683a9",
    "metadata": {},
    "source": [
     "## Step 3: Cut to area of interest"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "9f478c62-655f-40d9-9718-e7e61d0a1ab0",
    "metadata": {},
    "source": [
     "#### River"
@@ -330,7 +305,6 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "802ab5c3-3e4e-4596-b86e-4e276dc6b8d1",
    "metadata": {
     "tags": []
    },
@@ -353,7 +327,6 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "2afca7da-f38c-41fe-9105-b9a7c809fa6e",
    "metadata": {
     "tags": []
    },
@@ -366,7 +339,6 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "cbe5cf25-3ef0-46f4-b247-e94b3efc5ceb",
    "metadata": {
     "tags": []
    },
@@ -378,7 +350,6 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "e074261f-de51-43e0-91e6-61616428df6b",
    "metadata": {
     "tags": []
    },
@@ -403,9 +374,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "6b05f508-1e07-43d4-89f5-34e22356097f",
    "metadata": {},
    "source": [
     "#### DEM"
@@ -414,7 +383,6 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "b692d14a-92bc-4347-a2ce-aadde53553d9",
    "metadata": {
     "tags": []
    },
@@ -424,9 +392,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "4be52a2a-f45e-4728-8a9c-f1ffa106de7c",
    "metadata": {},
    "source": [
     "Let's check if everything looks good"
@@ -435,7 +401,6 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "94b77314-b172-40fe-a49d-c58fc75549f4",
    "metadata": {
     "tags": []
    },
@@ -468,18 +433,14 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "a37732ea-bfe6-42c9-9d63-8a08734076c5",
    "metadata": {},
    "source": [
     "## Step 4: Calculate REM"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "685fd2c2-5ada-44ba-b247-66d884db38a6",
    "metadata": {},
    "source": [
     "To calculate the REM, we need to \n",
@@ -489,18 +450,14 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "613ab683-1ad1-4dda-81d9-432d4b3d4bba",
    "metadata": {},
    "source": [
     "### 4.1. Sample"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "b046bae0-923f-48c0-bf02-04d2e5716a81",
    "metadata": {},
    "source": [
     "Extract coordinates as `DataArray`"
@@ -509,7 +466,6 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "c3eba310-3ba5-4b66-91c0-ecf8882d8978",
    "metadata": {
     "tags": []
    },
@@ -530,7 +486,6 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "165a92b5-98e8-4e8d-b3ed-95f27dcec017",
    "metadata": {
     "tags": []
    },
@@ -541,9 +496,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "da4f561a-0682-44f3-8d95-7d9ed44bdcf3",
    "metadata": {},
    "source": [
     "Use xarray's [`interp`](https://xarray.pydata.org/en/stable/generated/xarray.DataArray.interp.html#xarray.DataArray.interp) to extract the river's elevation."
@@ -552,7 +505,6 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "b488b82a-9dfe-4293-a92f-f3eb6d5b4960",
    "metadata": {
     "tags": []
    },
@@ -562,9 +514,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "1361077e-cd2a-4953-b431-7f4a36e76bae",
    "metadata": {
     "tags": []
    },
@@ -573,9 +523,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "b90bbb95-0130-4124-9aff-f6ffe89abbf9",
    "metadata": {},
    "source": [
     "Prepare data for the interpolation"
@@ -584,7 +532,6 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "60aef60e-c783-41c3-8884-87a7e4f7c85e",
    "metadata": {
     "tags": []
    },
@@ -604,7 +551,6 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "e94fda27-4a38-41d7-99b3-704d99ef3211",
    "metadata": {
     "tags": []
    },
@@ -631,9 +577,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "d786da8a-a022-439b-a988-689a4393d750",
    "metadata": {},
    "source": [
     "Perform the interpolation. Here we use a simple implementation of [IWD](https://en.wikipedia.org/wiki/Inverse_distance_weighting) which averages the 5 nearest points, weighted by inverse distance."
@@ -642,7 +586,6 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "27857076-2efd-4a14-b184-0882770d39fb",
    "metadata": {
     "tags": []
    },
@@ -665,7 +608,6 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "f35cf4f6-6ffc-49ad-bebe-e0b0e3d12265",
    "metadata": {
     "tags": []
    },
@@ -677,7 +619,6 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "9060687c-312f-45a8-8d4b-fd1e5532699d",
    "metadata": {
     "tags": []
    },
@@ -695,7 +636,6 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "3a2e02e1-459f-4fbf-9ee4-47d64a4c54ce",
    "metadata": {
     "tags": []
    },
@@ -717,9 +657,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "a91b5733-f341-44a8-82f7-04155d713a23",
    "metadata": {},
    "source": [
     "We create a `DataArray` out of the inerpolated values"
@@ -728,7 +666,6 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "9c8762a5-6bc6-4c42-ad76-9817d9923197",
    "metadata": {
     "tags": []
    },
@@ -742,7 +679,6 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "f2364843-3984-4c1e-b7cd-9b55fe6e5294",
    "metadata": {
     "tags": []
    },
@@ -775,9 +711,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "4fb81b19-b415-40d2-98e4-ac3886f3672a",
    "metadata": {},
    "source": [
     "### 4.3. Calculate"
@@ -786,7 +720,6 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "7a647631-d344-4e62-b1d6-c35dda2bcf40",
    "metadata": {
     "tags": []
    },
@@ -796,18 +729,14 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "64c1f402-498e-49c8-a025-538d82008fe8",
    "metadata": {},
    "source": [
     "# Step 5: Visualize"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "96deab44-b988-4bc3-8561-0a8501cc19c4",
    "metadata": {},
    "source": [
     "Let's make some pretty REM visualizations!"
@@ -816,7 +745,6 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "fe44948e-e82e-48c9-94cf-2a6514d7955a",
    "metadata": {
     "tags": []
    },
@@ -828,7 +756,6 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "c8589ff3",
    "metadata": {
     "tags": []
    },
@@ -871,9 +798,7 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "1d8d3b89-0ed4-4d25-b840-da7bd94f6549",
    "metadata": {},
    "source": [
     "We can also visualize the DEM along with the REM"
@@ -882,7 +807,6 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "ed0e5c0d",
    "metadata": {
     "tags": []
    },
@@ -941,7 +865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -955,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
